--- a/分派任务1.md
+++ b/分派任务1.md
@@ -12,9 +12,9 @@
 
 ![qwq](3.png)
 
-![qwq](3_2.png)
+![qwq](3_2.gif)
 
-![qwq](3_3.png)
+![qwq](3_3.jpeg)
 
 *不需要如此复杂的搜索框，适当简化即可
 
@@ -28,11 +28,11 @@
 
 参考:
 
-![qwq](2.png)
+![qwq](2.jpeg)
 
-![qwq](2_2.png)
+![qwq](2_2.jpeg)
 
-![qwq](2_3.png)
+![qwq](2_3.jpeg)
 
 *不需要如此复杂的侧边栏，但是必须要有卡片预览功能。
 
